[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Themes/Altepedia_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Panels/ALTEMON_LIST.tscn" type="PackedScene" id=2]
[ext_resource path="res://Panels/BASIC_STATS.tscn" type="PackedScene" id=3]
[ext_resource path="res://Panels/EXTRA_DATA.tscn" type="PackedScene" id=4]
[ext_resource path="res://Panels/TOOLBAR.tscn" type="PackedScene" id=5]
[ext_resource path="res://MAIN.gd" type="Script" id=6]

[node name="MAIN" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGD" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BGD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TOOLS" parent="BGD/VBoxContainer" instance=ExtResource( 5 )]

[node name="PANEL_BOX" type="HBoxContainer" parent="BGD/VBoxContainer"]
margin_top = 37.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ALTEMON_LIST" parent="BGD/VBoxContainer/PANEL_BOX" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 662.0
margin_bottom = 543.0

[node name="LEFT_PANEL" parent="BGD/VBoxContainer/PANEL_BOX" instance=ExtResource( 3 )]

[node name="TABS" parent="BGD/VBoxContainer/PANEL_BOX" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
margin_left = 436.0

[node name="OpenFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
custom_colors/folder_icon_modulate = Color( 0.760784, 0.403922, 0.184314, 1 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.res" )
current_dir = "/Godot/Altepedia"
current_path = "/Godot/Altepedia/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
custom_colors/folder_icon_modulate = Color( 0.760784, 0.403922, 0.184314, 1 )
access = 2
filters = PoolStringArray( "*.res" )
current_dir = "/Godot/Altepedia"
current_path = "/Godot/Altepedia/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="display_panel" from="BGD/VBoxContainer/PANEL_BOX/LEFT_PANEL" to="." method="_on_display_panel_change_request"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
